Fixed bug in Preview Pane + code optimizations
Fixed the example item floating outside the preview pane when it was
resized to be smaller than the item's position. The example item is now
pushed upwards when shrinking the preview area.

Moved the testing of the 'changeInProgress' flag to within the functions
that use it. This means that these functions will be called
unnecessarily but will not execute their contents. This is not ideal
from an efficiency standpoint, however, it modularizes the lock mechanic
to stay within it's context (invisible to calling code). This means that
you can call the functions from anywhere without having to remember to
test the lock first, thus making the code more maintainable. (Down with
spaghetti!)

--- a/src/css/_panes.scss
+++ b/src/css/_panes.scss
@@ -112,12 +112,14 @@
 
 /*===== Preview Pane =====*/
 #preview {
+    display: flex;
     background-color: black;
     flex-grow: 0;
     flex-shrink: 0;
     .pane-handle {
         display: flex;
         justify-content: space-between;
+        flex-shrink: 0;
         
         input {
             max-width: 50%;
@@ -130,7 +132,9 @@
 #preview-window {
     position: relative;
     text-align: center;
+    flex-grow: 1;
     height: 4rem;
+    overflow: hidden;
 }
 
 #preview-text {
@@ -142,6 +146,7 @@
     background-color: rgba(0, 0, 0, .5);
     border: 1px solid;
     border-color: rgba(0,0,0,0);
+    text-align: center;
 }
 
 /*===== Theme Pane =====*/
